<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceSOS</string>
    <string name="toggleOn">ON</string>
    <string name="toggleOff">OFF</string>
    <string name="action_settings">Settings</string>
	<string name="local_service_started">voice service started</string>
	<string name="local_service_stopped">voice service stopped</string>
    <string name="str_setting">Set</string>
    <string name="str_back">Back</string>
    <string name="str_phone">Phone Number</string>
    <string name="str_message">Message</string>
    <string name="str_voice">SOS call</string>
   
</resources>
